making of downloadable.gz