@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>25</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -51,6 +51,23 @@
             <artifactId>spring-web</artifactId>
             <version>7.0.6</version>
         </dependency>
+		<!-- Spring Boot Starter JDBC -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+
+		<!-- Oracle JDBC Driver
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>21.9.0.0</version>
+		</dependency> -->
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc11</artifactId>
+			<version>23.3.0.23.09</version>
+		</dependency>
     </dependencies>
 
 	<build>
@@ -59,6 +76,59 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<!-- Create custom JRE + tar.gz -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>3.1.0</version>
+
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+
+						<configuration>
+							<target>
+
+								<!-- Create custom JRE -->
+								<exec executable="jlink">
+									<arg value="--add-modules"/>
+									<arg value="java.base,java.desktop,java.logging,java.sql,java.naming,java.management,java.instrument,java.xml,java.security.jgss,jdk.unsupported"/>
+									<arg value="--output"/>
+									<arg value="${project.build.directory}/runtime"/>
+									<arg value="--strip-debug"/>
+									<arg value="--compress=2"/>
+									<arg value="--no-header-files"/>
+									<arg value="--no-man-pages"/>
+								</exec>
+
+								<!-- Create bundle folder -->
+								<mkdir dir="${project.build.directory}/bundle"/>
+
+								<copy file="${project.build.directory}/${project.build.finalName}.jar"
+									  tofile="${project.build.directory}/bundle/app.jar"/>
+
+								<copy todir="${project.build.directory}/bundle/jre">
+									<fileset dir="${project.build.directory}/runtime"/>
+								</copy>
+
+								<!-- Create tar.gz -->
+								<tar destfile="${project.build.directory}/hello-bundle.tar.gz"
+									 compression="gzip">
+									<tarfileset dir="${project.build.directory}/bundle"
+												prefix="myapp"/>
+								</tar>
+
+							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
